--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@use "pkg:uswds-core" with (
+@use "uswds-core" with (
 	$theme-image-path: "@nciocpl/ncids-css/uswds-img",
 	$theme-show-notifications: false,
 	$theme-show-compile-warnings: false,
